<resources>
    <string name="app_name">ProxEvent</string>


    <string name="Home">Home</string>


    <string name="titleTopics">Topics</string>
    <string name="addActivity">Add an activity</string>
    <string name="messages">Admin Messages</string>
    <string name="myActivities">My activities</string>


    <string name="titleQuestionsList">Questions</string>
    <string name="favorite">Favorites</string>
    <string name="addQuestion">Add a Question</string>
    <string name="profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>

    <string-array name="topics_array">
        <item>All</item>
        <item>Cuisine</item>
        <item>Sport</item>
        <item>Games</item>
        <item>Party</item>
        <item>Studies</item>
        <item>Travel</item>
        <item>Music</item>
        <item>Work</item>
        <item>Art</item>
        <item>Nature</item>
        <item>Health</item>
        <item>Auto - Moto</item>
        <item>IT - Tech</item>
        <item>Other</item>
    </string-array>

    <string-array name="topics_array_spinner">
        <item>All</item>
        <item>Cuisine</item>
        <item>Sport</item>
        <item>Games</item>
        <item>Party</item>
        <item>Studies</item>
        <item>Travel</item>
        <item>Music</item>
        <item>Work</item>
        <item>Art</item>
        <item>Nature</item>
        <item>Health</item>
        <item>Auto - Moto</item>
        <item>IT - Tech</item>
        <item>Other</item>
    </string-array>


    <string name="currentActivities">Current activities</string>
    <string name="chat">Chat</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Favorite">Favorites</string>
    <string name="registration">Registration</string>
    <string name="newQuestion">New Question</string>
    <string name="saved_high_score_default">1</string>
    <string name="emptyList">Empty list</string>
    <string name="enterTitle">Enter a title</string>
    <string name="author">Author: </string>
    <string name="nb_posts">Questions: </string>
    <string name="save">save</string>
    <string name="yourPosts">Your questions</string>
    <string name="rememberLogin">Remember login</string>
    <string name="editContent">Edit content</string>
    <string name="imgErro">Select an image</string>
    <string name="thanksRegistration">Registration successful</string>
    <string name="changePhoto">Change photo</string>
    <string name="photochange">photo changed</string>
    <string name="imgSelected">image selected</string>
    <string name="selectimage">Select an image</string>
    <string name="createAccount">Create an account</string>
    <string name="login">Log in</string>
    <string name="topicselected">Topic selected:</string>
    <string name="topicChoose">Topic selected</string>
    <string name="enterPassword">Enter a password</string>
    <string name="enterUsername">Enter username</string>
    <string name="unameResctriction">characters: min 3</string>
    <string name="passwordWrong">Password does not match</string>
    <string name="usernameExist">Username already exist</string>
    <string name="title">Title ...</string>
    <string name="content">Content ...</string>
    <string name="editTitle">Edit title</string>
    <string name="chooseTopic">Choose a topic</string>
    <string name="questionCreated">Question created</string>
    <string name="Languages">Languages</string>
    <string name="Account">Account</string>
    <string name="DeletAccount">delete my account</string>
    <string name="loggOff">Log off</string>
    <string name="Loggof">Logg of</string>
    <string name="deleteAccountConfirm">Are you sure you want delete your account?</string>
    <string name="accountDelete">Account deleted</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Comments">Comments</string>
    <string name="addComment">Add public comment...</string>
    <string name="cancel">Cancel</string>
    <string name="commentAdded">Comment added</string>
    <string name="enterComment">Enter a comment</string>
    <string name="nbLike">Like: </string>
    <string name="sortASC">ASC</string>
    <string name="sortTime">New</string>
    <string name="addedDate">From: </string>
    <string name="deletAccount">Delete my account</string>
    <string name="sortTimeOld">Old</string>
    <string name="sortDESC">DESC</string>
    <string name="english">EN</string>
    <string name="french">FR</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="loginSuccess">Login successfull</string>
    <string name="favoriDeleted">All favorites deleted</string>
    <string name="NofavoriDeleted">No favorites in list</string>
    <string name="deleteAllFavorites">Delete all favorites</string>
    <string name="deleteAllFavoriteMessage">Are you sure to delete all your favorites?</string>
    <string name="topic">Topic</string>
    <string name="areysure">Are you sure?</string>
    <string name="messageDelete1Favorite">You will delete this favorite</string>
    <string name="delete">delete</string>
    <string name="favoriteDeleted">Favorite delete</string>
    <string name="favoriteAdded">Favorite added</string>
    <string name="cancelling">cancel</string>
    <string name="view">view</string>
    <string name="comment">Comments</string>
    <string name="close">close</string>
    <string name="nbCommentsInfo">Comments:</string>
    <string name="nbFavorites">Favorites:</string>
    <string name="share">Share the question</string>
    <string name="English">English</string>
    <string name="French">French</string>
    <string name="loginWrong">Username or password does not match</string>
    <string name="saveComent">add</string>
    <string name="commentInfo">Comments: </string>
    <string name="enterContent">Enter content</string>
    <string name="characMinMax">characters: min 3, max 70</string>
    <string name="characMin">characters: min 30</string>
    <string name="notOnline">You are not online</string>
    <string name="notConnected">No internet</string>
    <string name="loading">synchronize ...</string>
    <string name="menu">menu</string>
    <string name="Messages">Messages</string>
    <string name="newActivity">New Activity</string>
    <string name="select_img_topic">Select an image and a topic</string>
    <string name="editcontent">EditContent</string>
    <string name="select_a_title">Select a title</string>
    <string name="enter_a_content">Enter a Content</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="choose_a_endDate">Choose the End Date</string>
    <string name="select_a_date">Select a Date...</string>
    <string name="permanent">Permanent</string>
    <string name="or">or</string>
    <string name="choose_a_location">Choose a Location</string>
    <string name="select_location">select Location</string>
    <string name="no_specific">No Specific</string>
    <string name="sign_in">sign-in</string>
    <string name="enterChat">Write something</string>
    <string name="addChat">Type a message</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="display_name">display name</string>
    <string name="change_image">change image</string>
    <string name="change_status">change status</string>
    <string name="hi_here_i_m_using_proxevent">hi here i m using proxevent</string>
    <string name="save_changes">save changes</string>
    <string name="your_status">your status</string>
    <string name="title_activity_user">user</string>
    <string name="to">To</string>
    <string name="textview">TextView</string>
    <string name="from">From</string>
    <string name="adress">Adress...</string>
    <string name="dateEnd">End date...</string>
    <string name="created_date">Created date</string>
    <string name="endDate">End:</string>
    <string name="Activities">Activities</string>
    <string name="enter_a_location">Enter a Location</string>
    <string name="location">Location...</string>
    <string name="begin_date">Begin Date...</string>
    <string name="enter_the_begin_date">Enter the Begin Date</string>
    <string name="choose_the_begining_date">Choose the Begining Date</string>
    <string name="dilog_message_deleteActivity">Delete this Activity?</string>
    <string name="dialog_title_deleteActivity">Are you sure you want to delete this Activity?</string>
    <string name="Continue">Continue</string>
    <string name="Cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="sendMessage">Send Message</string>
    <string name="currentUsers">Users</string>
    <string name="Admin">Administrator</string>
    <string name="Title_Content">You need to have a Title and a Content</string>
    <string name="dilog_title_deleteUser">Delete your Account</string>
    <string name="dialog_message_deleteUser">Are you sure that you want to delete your Account?</string>
    <string name="ContactAdmin">Errors on deleting your account, retry or send message to the admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MessageFromAdmin">Messages from admin</string>
    <string name="administrate">Administrate</string>


</resources>
