<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProjectXavier="http://schemas.android.com/apk/res-auto"
    android:textColor="@color/fontColor">


    <item
        android:id="@+id/mainMenu"
        android:icon="@drawable/ic_dehaze"
        ProjectXavier:showAsAction="always"
        android:title="@string/menu">

        <menu>
            <item
                android:id="@+id/action_home_map"
                android:title="@string/Home"
                android:icon="@drawable/ic_action_globe"/>

            <item
                android:id="@+id/action_topics"
                android:title="@string/Activities"
                android:icon="@drawable/ic_action_activity"/>

            <item
                android:id="@+id/action_add_activity"
                android:icon="@drawable/ic_action_add"
                android:title="@string/addActivity"/>

            <item
                android:id="@+id/action_messages"
                android:icon="@drawable/ic_action_message"
                android:title="@string/messages"/>

            <item
                android:id="@+id/action_my_activities"
                android:icon="@drawable/ic_action_my_activities"
                android:title="@string/myActivities"/>


            <item
                android:id="@+id/action_profile"
                android:icon="@drawable/ic_action_user"
                android:title="@string/profile"/>

            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_gear"
                android:title="@string/Settings"/>

        </menu>
    </item>
</menu>

