<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_AL_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@android:drawable/presence_away"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_AL_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:text="@string/title"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        android:layout_alignTop="@+id/civ_AL_image"
        android:layout_alignEnd="@+id/tv_AL_dateEnd"
        android:layout_toEndOf="@+id/civ_AL_image" />

    <TextView
        android:id="@+id/tv_AL_Adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:text="@string/adress"
        android:textAlignment="center"
        tools:ignore="RtlHardcoded"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/tv_AL_Title"
        android:layout_alignStart="@+id/tv_AL_Title" />

    <TextView
        android:id="@+id/tv_AL_dateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/civ_AL_image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/dateEnd"
        tools:text="End date..."
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_AL_ToDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_AL_dateEnd"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/tv_AL_dateEnd"
        android:layout_toStartOf="@+id/tv_AL_dateEnd"
        android:text="@string/to"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:text="To" />

    <TextView
        android:id="@+id/tv_AL_dateCrea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_AL_ToDate"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/tv_AL_ToDate"
        android:layout_toStartOf="@+id/tv_AL_ToDate"
        android:text="@string/created_date"
        tools:text="Created Date..."
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_AL_FromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_AL_dateCrea"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/tv_AL_dateCrea"
        android:layout_toStartOf="@+id/tv_AL_dateCrea"
        android:text="@string/from"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        tools:text="@string/from" />


</RelativeLayout>