<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.train.proxevent.profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="33dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_profile_displayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/civ_profile_image"
        android:layout_marginTop="34dp"
        android:padding="15dp"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_profile_displayName"
        android:layout_alignStart="@+id/tv_profile_displayName"
        android:layout_below="@+id/tv_profile_displayName"
        android:layout_marginTop="24dp"
        android:padding="15dp"
        android:text="@string/hi_here_i_m_using_proxevent"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/tv_profile_displayName"
        android:layout_alignRight="@+id/tv_profile_displayName" />

    <Button
        android:id="@+id/btn_profile_chImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/btn_settings_chStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/change_status"
        android:layout_below="@+id/btn_profile_chImage"
        android:layout_centerHorizontal="true" />

</RelativeLayout>