<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.train.proxevent.admin">

    <LinearLayout
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.23"
            android:text="@string/send"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendMessageEditText"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteX="25dp"
            tools:layout_conversion_absoluteY="227dp" />

        <EditText
            android:id="@+id/sendMessageEditText"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.23"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:text="@string/sendMessage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home"
            tools:layout_conversion_absoluteHeight="42dp"
            tools:layout_conversion_absoluteWidth="352dp"
            tools:layout_conversion_absoluteX="16dp"
            tools:layout_conversion_absoluteY="143dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.23">

            <TextView
                android:id="@+id/tvEmptyUserCurrentList"
                android:layout_width="201dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/currentUsers"
                android:textColor="@color/darkGray"
                android:textSize="10pt"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/goAdmin"
                android:layout_width="144dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="goAdmin"
                android:text="Administrate"
                android:visibility="invisible"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintLeft_toRightOf="@+id/tvEmptyUserCurrentList"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="5dp" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:orientation="vertical"
            android:id="@+id/profile_list_layout"
            android:background="@drawable/linear_border_square"
            android:weightSum="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_home_currActivities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10pt"
                tools:ignore="NestedScrolling"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

